// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AUTH_LOGIN: --------------------------------------------------------- RENDER: ----------------------------------------------------------- FormFields count 1`] = `
<div
  className="auth"
>
  <h1
    className="auth__title"
  >
    Регистрация
  </h1>
  <div
    className="auth__form form"
  >
    <div
      className="form__field-wrap"
      key="register-field-name"
    >
      <FormField
        error=""
        fieldName="name"
        id="register-field-name"
        onChange={[Function]}
        title="Имя"
        type="text"
      />
    </div>
    <div
      className="form__field-wrap"
      key="register-field-email"
    >
      <FormField
        error=""
        fieldName="email"
        id="register-field-email"
        onChange={[Function]}
        title="Email"
        type="text"
        value=""
      />
    </div>
    <div
      className="form__field-wrap"
      key="register-field-password"
    >
      <FormField
        error=""
        fieldName="password"
        id="register-field-password"
        onChange={[Function]}
        title="Пароль"
        type="password"
        value=""
      />
    </div>
    <div
      className="form__field-wrap"
      key="register-field-confirm"
    >
      <FormField
        error=""
        fieldName="confirm"
        id="register-field-confirm"
        onChange={[Function]}
        title="Повторите пароль"
        type="password"
      />
    </div>
    <button
      className="btn_order form__btn-submit"
    >
      Зарегистрироваться
    </button>
  </div>
</div>
`;

exports[`AUTH_REGISTER:  RENDER:  FormFields count 1`] = `
<div
  className="auth"
>
  <h1
    className="auth__title"
  >
    Регистрация
  </h1>
  <div
    className="auth__form form"
  >
    <div
      className="form__field-wrap"
      key="register-field-name"
    >
      <FormField
        error=""
        fieldName="name"
        id="register-field-name"
        onChange={[Function]}
        title="Имя"
        type="text"
        value=""
      />
    </div>
    <div
      className="form__field-wrap"
      key="register-field-email"
    >
      <FormField
        error=""
        fieldName="email"
        id="register-field-email"
        onChange={[Function]}
        title="Email"
        type="text"
        value=""
      />
    </div>
    <div
      className="form__field-wrap"
      key="register-field-password"
    >
      <FormField
        error=""
        fieldName="password"
        id="register-field-password"
        onChange={[Function]}
        title="Пароль"
        type="password"
        value=""
      />
    </div>
    <div
      className="form__field-wrap"
      key="register-field-confirm"
    >
      <FormField
        error=""
        fieldName="confirm"
        id="register-field-confirm"
        onChange={[Function]}
        title="Повторите пароль"
        type="password"
        value=""
      />
    </div>
    <button
      className="btn_order form__btn-submit"
      onClick={[Function]}
    >
      Зарегистрироваться
    </button>
  </div>
</div>
`;

exports[`AUTH_REGISTER: ------------------------------------------------------ RENDER: ----------------------------------------------------------- FormFields count 1`] = `
<div
  className="auth"
>
  <h1
    className="auth__title"
  >
    Регистрация
  </h1>
  <div
    className="auth__form form"
  >
    <div
      className="form__field-wrap"
      key="register-field-name"
    >
      <FormField
        error=""
        fieldName="name"
        id="register-field-name"
        onChange={[Function]}
        title="Имя"
        type="text"
        value=""
      />
    </div>
    <div
      className="form__field-wrap"
      key="register-field-email"
    >
      <FormField
        error=""
        fieldName="email"
        id="register-field-email"
        onChange={[Function]}
        title="Email"
        type="text"
        value=""
      />
    </div>
    <div
      className="form__field-wrap"
      key="register-field-password"
    >
      <FormField
        error=""
        fieldName="password"
        id="register-field-password"
        onChange={[Function]}
        title="Пароль"
        type="password"
        value=""
      />
    </div>
    <div
      className="form__field-wrap"
      key="register-field-confirm"
    >
      <FormField
        error=""
        fieldName="confirm"
        id="register-field-confirm"
        onChange={[Function]}
        title="Повторите пароль"
        type="password"
        value=""
      />
    </div>
    <button
      className="btn_order form__btn-submit"
      onClick={[Function]}
    >
      Зарегистрироваться
    </button>
  </div>
</div>
`;
